--- a/dom/tests/mochitest/mouselock/file_nestedFullScreen.html
+++ b/dom/tests/mochitest/mouselock/file_nestedFullScreen.html
@@ -11,15 +11,17 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=633602
   <link rel="stylesheet" type="text/css" href="/tests/SimpleTest/test.css"/>
 </head>
 <body onload="start();">
-  <a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=633602">Mozilla Bug 633602</a>
+  <a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=633602">
+    Mozilla Bug 633602
+  </a>
   <p id="display"></p>
   <div id="content" style="display: none">
   </div>
 
-	<div id="parentDiv">
-		<div id="childDiv">
-		</div>
-	</div>
+  <div id="parentDiv">
+    <div id="childDiv">
+    </div>
+  </div>
 
   <pre id="test">
     <script type="application/javascript">
@@ -27,37 +29,38 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=633602
       SimpleTest.waitForExplicitFinish();
 
       var pointer = navigator.pointer;
-			var parentDiv;
-			var childDiv;
-			var finish = false;
+      var parentDiv;
+      var childDiv;
+      var finish = false;
 
       document.addEventListener("mozfullscreenchange", function() {
-				// Must call document.mozCancelFullScreen twice, since there are
-				// two nested elements in fullscreen mode
-				if (finish) {
-					finish = false;
-					// Cancel fullscreen on parentDiv
-					document.mozCancelFullScreen();
+        // Must call document.mozCancelFullScreen twice, since there are
+        // two nested elements in fullscreen mode
+        if (finish) {
+          finish = false;
+          // Cancel fullscreen on parentDiv
+          document.mozCancelFullScreen();
           SimpleTest.finish();
-       	} else if (document.mozFullScreenElement === parentDiv) {
-					pointer.lock(parentDiv, function () {
-						// Mouse should be locked to the parentDiv
-						ok (pointer.islocked, "Mouse should be locked to parentDiv");
-						childDiv.mozRequestFullScreen();
-					});
+        } else if (document.mozFullScreenElement === parentDiv) {
+          pointer.lock(parentDiv, function () {
+            // Mouse should be locked to the parentDiv
+            ok (pointer.islocked, "Mouse should be locked to parentDiv");
+            childDiv.mozRequestFullScreen();
+          });
         } else if (document.mozFullScreenElement === childDiv) {
-					// Mouse wasn't locked to childDiv, it was locked to parentDiv
-					// If childDiv receives fullscreen, mouse should be unlocked
-					is(pointer.islocked(), false, "Mouse shouldn't be locked to childDiv");
-					finish = true;
-					// Cancel fullscreen on childDiv
-					document.mozCancelFullScreen();
-				}
+          // Mouse wasn't locked to childDiv, it was locked to parentDiv
+          // If childDiv receives fullscreen, mouse should be unlocked
+          is(pointer.islocked(), false, "Mouse shouldn't be locked to " +
+            "childDiv");
+          finish = true;
+          // Cancel fullscreen on childDiv
+          document.mozCancelFullScreen();
+        }
       }, false);
 
       function start() {
-				parentDiv = document.getElementById("parentDiv");
-				childDiv = document.getElementById("childDiv");
+        parentDiv = document.getElementById("parentDiv");
+        childDiv = document.getElementById("childDiv");
 
         SimpleTest.waitForFocus(function() {
           parentDiv.mozRequestFullScreen();
@@ -67,3 +70,4 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=633602
   </pre>
 </body>
 </html>
+
